objects/sumoapp__ResourcePool__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__AssignmentMode__c</fullName>
        <label>Assignment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CLOSEST_DISTANCE</fullName>
                    <label>Closest Distance</label>
                </value>
                <value>
                    <fullName>LOAD_BALANCE</fullName>
                    <label>Load-Balance</label>
                </value>
                <value>
                    <fullName>PRIORITY_BASED</fullName>
                    <label>Priority Based</label>
                </value>
                <value>
                    <fullName>RANDOM</fullName>
                    <label>Random</label>
                </value>
                <value>
                    <fullName>ROUND_ROBIN</fullName>
                    <default>true</default>
                    <label>Round-Robin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__AssignmentRuleScope__c</fullName>
        <label>Assignment Rule Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>sumoapp__AssignmentRuleScope</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__LoadBalanceNextXDays__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Load Balance Next [X] days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__MemberType__c</fullName>
        <label>Member Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USERS</fullName>
                    <label>Users</label>
                </value>
                <value>
                    <fullName>PROFILES</fullName>
                    <label>Profiles</label>
                </value>
                <value>
                    <fullName>GROUPS</fullName>
                    <label>Groups</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__NumOfUsers__c</fullName>
        <label>Number of Users</label>
        <summaryForeignKey>sumoapp__ResourcePoolMember__c.sumoapp__ResourcePool__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>sumoapp__PriorityAssignmentMode__c</fullName>
        <label>Priority Based Assignment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>sumoapp__AssignmentMode__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LOAD_BALANCE</fullName>
                    <label>Load-Balance</label>
                </value>
                <value>
                    <fullName>ROUND_ROBIN</fullName>
                    <label>Round-Robin</label>
                </value>
                <value>
                    <fullName>RANDOM</fullName>
                    <label>Random</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__PriorityBasedNextXDays__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Priority Based Next [X] days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__ShowPriorityLevel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Priority Level</label>
        <type>Checkbox</type>
    </fields>
    <label>SUMO Resource Pool</label>
    <listViews>
        <fullName>sumoapp__All</fullName>
        <columns>NAME</columns>
        <columns>sumoapp__AssignmentMode__c</columns>
        <columns>sumoapp__NumOfUsers__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>All SUMO Resource Pools</label>
    </listViews>
    <nameField>
        <label>Resource Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SUMO Resource Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>